syntax = "proto3";

package sum;

option go_package = "go-grpc-course/calculator/proto";

message PrimeRequest {
  int32 number = 1;
}

message PrimeResponse {
  int32 factor = 1;
}
